--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -7,12 +7,26 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css', integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO', crossorigin='anonymous')
     body
+      nav.navbar.navbar-expand-lg.fixed-top.navbar-dark.bg-dark
+        a.navbar-brand(href='/') 餐廳評論網
+        #navbarsExampleDefault.navbar-collapse.offcanvas-collapse
+          ul.navbar-nav.mr-auto
+          div
+            //- if user.isAdmin
+              //- a(href='/admin', style='color: white;margin-right: 10px;') Admin 後台
+
+            if user
+              span(style='color: white;margin-right: 10px;') Hi, #{user.email}
+              a(href='/users/{{user.id}}', style='color: white;margin-right: 10px;') Profile
+              a(href='/logout')
+                button.btn.btn-outline-success.my-2.my-sm-0 LogOut
+      br
+
       main(role='main')
         .album.py-5.bg-light
           .container
-            - var messages = {error_messages:`${error_messages}`,success_messages:`${success_messages}`}
-              if messages.error_messages
-                .alert.alert-danger(role='alert', style='margin: 30px 0 ;') #{messages.error_messages}
+            if error_messages.length
+              .alert.alert-danger(role='alert', style='margin: 30px 0 ;') #{error_messages}
             block body
             block script
               script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
