--- a/views/signin.pug
+++ b/views/signin.pug
@@ -3,7 +3,7 @@ extends layouts/main
 block body
   form.form-signin.needs-validation(action='/signin', method='POST', style='width: 100%;' novalidate)
       .text-center.mb-4
-        h1.h3.mb-3.font-weight-normal Sign IN
+        h1.h3.mb-3.font-weight-normal Sign In
       //- .form-label-group
       //-   label(for='inputName') Name
       //-   input.form-control(type='text', name='name', placeholder='Name', required='', autofocus='', id='name')
