--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -15,9 +15,9 @@ html(lang="en")
             //- if user.isAdmin
               //- a(href='/admin', style='color: white;margin-right: 10px;') Admin 後台
 
-            if user
+            if (user)
               span(style='color: white;margin-right: 10px;') Hi, #{user.email}
-              a(href='/users/{{user.id}}', style='color: white;margin-right: 10px;') Profile
+              a(href='/users/#{user.id}', style='color: white;margin-right: 10px;') Profile
               a(href='/logout')
                 button.btn.btn-outline-success.my-2.my-sm-0 LogOut
       br
@@ -29,6 +29,7 @@ html(lang="en")
               .alert.alert-danger(role='alert', style='margin: 30px 0 ;') #{error_messages}
             if success_messages.length
               .alert.alert-success(role='alert', style='margin: 30px 0 ;') #{success_messages}
+
             block body
             block script
               script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
