--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -16,7 +16,7 @@ html(lang="en")
               //- a(href='/admin', style='color: white;margin-right: 10px;') Admin 後台
 
             if (user)
-              span(style='color: white;margin-right: 10px;') Hi, #{user.email}
+              span(style='color: white;margin-right: 10px;') Hi, #{user.name}
               a(href='/users/#{user.id}', style='color: white;margin-right: 10px;') Profile
               a(href='/logout')
                 button.btn.btn-outline-success.my-2.my-sm-0 LogOut
