add read one restaurant function

--- a/views/admin/create.pug
+++ b/views/admin/create.pug
@@ -18,3 +18,5 @@ block body
       label(for='description') Description
       textarea#description.form-control(name='description', rows='3')
     button.btn.btn-primary(type='submit') Submit
+    a(href='/admin/restaurants')
+      button.btn.btn-primary.ml-5(type='button') Back
