add edit function

--- a/views/admin/create.pug
+++ b/views/admin/create.pug
@@ -1,22 +1,44 @@
 extends ../layouts/main
 
 block body
-  form(action='/admin/restaurants', method='POST')
-    .form-group
-      label(for='name') Name
-      input#name.form-control(type='text', name='name', placeholder='Enter name')
-    .form-group
-      label(for='tel') Tel
-      input#tel.form-control(type='text', name='tel', placeholder='Enter tel')
-    .form-group
-      label(for='address') Address
-      input#address.form-control(type='text', name='address', placeholder='Enter address')
-    .form-group
-      label(for='opening_hours') Opening Hours
-      input#opening_hours.form-control(type='time', name='opening_hours', placeholder='Enter opening_hours')
-    .form-group
-      label(for='description') Description
-      textarea#description.form-control(name='description', rows='3')
-    button.btn.btn-primary(type='submit') Submit
-    a(href='/admin/restaurants')
-      button.btn.btn-primary.ml-5(type='button') Back
+  if mode === 'edit'
+    form(action=`/admin/restaurants/${restaurant.id}?_method=PUT`, method='POST')
+      .form-group
+        label(for='name') Name
+        input#name.form-control(type='text', name='name', placeholder='Enter name', value=`${restaurant.name}`)
+      .form-group
+        label(for='tel') Tel
+        input#tel.form-control(type='text', name='tel', placeholder='Enter tel', value=`${restaurant.tel}`)
+      .form-group
+        label(for='address') Address
+        input#address.form-control(type='text', name='address', placeholder='Enter address', value=`${restaurant.address}`)
+      .form-group
+        label(for='opening_hours') Opening Hours
+        input#opening_hours.form-control(type='time', name='opening_hours', placeholder='Enter opening_hours', value=`${restaurant.opening_hours}`)
+      .form-group
+        label(for='description') Description
+        textarea#description.form-control(name='description', rows='3') #{restaurant.description}
+      button.btn.btn-primary(type='submit') Submit
+      a(href='/admin/restaurants')
+        button.btn.btn-primary.ml-5(type='button') Back
+        
+  else if mode === 'create'
+    form(action='/admin/restaurants', method='POST')
+      .form-group
+        label(for='name') Name
+        input#name.form-control(type='text', name='name', placeholder='Enter name', value=`${restaurant.name}`)
+      .form-group
+        label(for='tel') Tel
+        input#tel.form-control(type='text', name='tel', placeholder='Enter tel', value=`${restaurant.tel}`)
+      .form-group
+        label(for='address') Address
+        input#address.form-control(type='text', name='address', placeholder='Enter address', value=`${restaurant.address}`)
+      .form-group
+        label(for='opening_hours') Opening Hours
+        input#opening_hours.form-control(type='time', name='opening_hours', placeholder='Enter opening_hours', value=`${restaurant.opening_hours}`)
+      .form-group
+        label(for='description') Description
+        textarea#description.form-control(name='description', rows='3') #{restaurant.description}
+      button.btn.btn-primary(type='submit') Submit
+      a(href='/admin/restaurants')
+        button.btn.btn-primary.ml-5(type='button') Back
