--- a/views/admin/restaurant.pug
+++ b/views/admin/restaurant.pug
@@ -5,6 +5,7 @@ block body
     .col-md-12
       h1 #{restaurant.name}
     .col-md-4
+      img.img-responsive.center-block(src=`${restaurant.image}`, style='width: 250px;margin-bottom: 25px;')
       br
       .well
         ul.list-unstyled
