--- a/views/admin/restaurants.pug
+++ b/views/admin/restaurants.pug
@@ -2,6 +2,10 @@ extends ../layouts/main
 
 block body
   h1 餐廳後台
+  a.badge.badge-secondary.p-2(href='/admin/restaurants') Restaurants 
+  a.ml-4.badge.badge-secondary.p-2(href='/admin/users') Users
+  br
+  br
   a(href='/admin/restaurants/create')
     button.btn.btn-primary(type='button') New Restaurant
     br
