display Category in restaurants list and detail page

--- a/views/admin/restaurant.pug
+++ b/views/admin/restaurant.pug
@@ -4,6 +4,7 @@ block body
     .row
     .col-md-12
       h1 #{restaurant.name}
+      h4 [#{restaurant.Category.name}]
     .col-md-4
       img.img-responsive.center-block(src=`${restaurant.image}`, style='width: 250px;margin-bottom: 25px;')
       br
