compelete reading all categories

--- a/views/admin/restaurants.pug
+++ b/views/admin/restaurants.pug
@@ -3,6 +3,7 @@ extends ../layouts/main
 block body
   h1 餐廳後台
   a.badge.badge-secondary.p-2(href='/admin/restaurants') Restaurants 
+  a.ml-4.badge.badge-secondary.p-2(href='/admin/categories') Categories
   a.ml-4.badge.badge-secondary.p-2(href='/admin/users') Users
   br
   br
