--- a/views/restaurants.pug
+++ b/views/restaurants.pug
@@ -30,3 +30,18 @@ block body
   br
   br
 
+  nav(aria-label='Page navigation example')
+    ul.pagination
+      li.page-item
+        a.page-link(href=`/restaurants?page=${prev}&categoryId=${categoryId}`, aria-label='Previous')
+          span(aria-hidden='true') «
+      each item in totalPage
+        if item === page
+          li.page-item.active
+            a.page-link(href='#') #{item}
+        else
+          li.page-item
+            a.page-link(href=`/restaurants?page=${item}&categoryId=${categoryId}`) #{item}
+
+      a.page-link(href=`/restaurants?page=${next}&categoryId=${categoryId}`, aria-label='Next')
+        span(aria-hidden='true') »
