--- a/views/restaurant.pug
+++ b/views/restaurant.pug
@@ -20,5 +20,15 @@ block body
     hr
   br
   br
+
+  form(action='/comments', method='POST')
+    .form-group
+      label(for='text') 留下評論：
+      textarea#text.form-control(name='text', rows='3')
+    //- input為hidden，可以把restaurantId送到後端，並透過req.body.restaurantId取出
+    input(type='hidden', name='restaurantId', value=`${restaurant.id}`)
+    button.btn.btn-primary(type='submit') Submit
+    br
+    br
   a(href='javascript:history.back()') 回上一頁
   
