--- a/views/restaurant.pug
+++ b/views/restaurant.pug
@@ -21,6 +21,15 @@ block body
   br
   br
 
+  h3 所有評論：
+  each comment in restaurant.Comments
+    blockquote.blockquote.mb-0
+      h4
+        a(href=`/users/${comment.User.id}`) #{comment.User.name}
+      p #{comment.text}
+      footer.blockquote-footer #{createTime}
+  hr
+
   form(action='/comments', method='POST')
     .form-group
       label(for='text') 留下評論：
