--- a/views/editUser.pug
+++ b/views/editUser.pug
@@ -4,14 +4,24 @@ block body
   br
   br
   .row.bg-white.rounded.shadow-sm
-    .col-md-4.my-3
-      img.img-responsive.center-block(src=`${profile.image}`, style='width: 100%;')
-    .col-md-8.my-3
-      form(action=`/users/${profile.id}?_method=PUT`, method='POST', enctype='multipart/form-data')
-        .form-group
-          label(for='name') Name
-          input#name.form-control(type='text', name='name', placeholder='Enter name', value=`${profile.name}`)
-        .form-group
-          label(for='image') Image
-          input#image.form-control-file(type='file', name='image')
-        button.btn.btn-primary(type='submit') Submit
+    if profile.id === user.id
+      .col-md-4.my-3
+        img.img-responsive.center-block(src=`${profile.image}`, style='width: 100%;')
+      .col-md-8.my-3
+        form(action=`/users/${profile.id}?_method=PUT`, method='POST', enctype='multipart/form-data')
+          .form-group
+            label(for='name') Name
+            input#name.form-control(type='text', name='name', placeholder='Enter name', value=`${profile.name}`)
+          .form-group
+            label(for='image') Image
+            input#image.form-control-file(type='file', name='image')
+          button.btn.btn-primary(type='submit') Submit
+    else
+      .col-md-4.my-3
+        img.img-responsive.center-block(src=`${profile.image}`, style='width: 100%;')
+
+      .col-md-8.my-3
+        h3 #{profile.name}
+        h5.my-4 #{profile.email}
+        a(href=`/users/${user.id}`)
+          button.btn.btn-primary(type='button') back to your profile page
