Can count views of restaurant and diplay on dashboard

--- a/views/restaurantDashboard.pug
+++ b/views/restaurantDashboard.pug
@@ -6,7 +6,7 @@ block body
   hr
   ul
     li 目前有 #{restaurant.Comments.length} 則評論
-    li 瀏覽次數：
+    li 瀏覽次數：#{restaurant.viewCounts}
     li 收藏數：
   
   a(href='javascript:history.back()') 回上一頁
