create adding and removing Favorite function

--- a/views/restaurants.pug
+++ b/views/restaurants.pug
@@ -34,6 +34,12 @@ block body
               a(href=`/restaurants/${restaurant.id}`) #{restaurant.name}
             span.badge.badge-secondary #{restaurant.Category.name}
             p.card-text #{restaurant.description}
+            if restaurant.isFavorited
+              form(action=`/favorite/${restaurant.id}?_method=DELETE`, method='POST')
+                button.btn.btn-danger(type='submit') 移除最愛
+            else
+              form(action=`/favorite/${restaurant.id}`, method='POST')
+                button.btn.btn-primary(type='submit') 加到最愛
 
   br
   br
