create like and unlike function

--- a/views/restaurant.pug
+++ b/views/restaurant.pug
@@ -26,6 +26,12 @@ block body
       else
         form(action=`/favorite/${restaurant.id}`, method='POST',style="display: contents")
           button.btn.btn-primary.ml-3(type='submit') 加到最愛
+      if isLiked
+        form(action=`/like/${restaurant.id}?_method=DELETE`, method='POST',style="display: contents")
+          button.btn.btn-danger.ml-3(type='submit') Unlike
+      else
+        form(action=`/like/${restaurant.id}`, method='POST',style="display: contents")
+          button.btn.btn-primary.ml-3(type='submit') Like
     hr
   br
   br
