--- a/views/restaurants.pug
+++ b/views/restaurants.pug
@@ -34,12 +34,19 @@ block body
               a(href=`/restaurants/${restaurant.id}`) #{restaurant.name}
             span.badge.badge-secondary #{restaurant.Category.name}
             p.card-text #{restaurant.description}
-            if restaurant.isFavorited
-              form(action=`/favorite/${restaurant.id}?_method=DELETE`, method='POST')
-                button.btn.btn-danger(type='submit') 移除最愛
-            else
-              form(action=`/favorite/${restaurant.id}`, method='POST')
-                button.btn.btn-primary(type='submit') 加到最愛
+            .row.d-md-flex.flex-row
+              if restaurant.isFavorited
+                form(action=`/favorite/${restaurant.id}?_method=DELETE`, method='POST')
+                  button.btn.btn-danger.ml-3(type='submit') 移除最愛
+              else
+                form(action=`/favorite/${restaurant.id}`, method='POST')
+                  button.btn.btn-primary.ml-3(type='submit') 加到最愛
+              if restaurant.isLiked
+                form(action=`/like/${restaurant.id}?_method=DELETE`, method='POST')
+                  button.btn.btn-danger.ml-3(type='submit') Unlike
+              else
+                form(action=`/like/${restaurant.id}`, method='POST')
+                  button.btn.btn-primary.ml-3(type='submit') Like
 
   br
   br
