--- a/views/restaurants.pug
+++ b/views/restaurants.pug
@@ -6,6 +6,10 @@ block body
       a.nav-link.active(href='/restaurants') 首頁
     li.nav-item
       a.nav-link(href='/restaurants/feeds') 最新動態
+    li.nav-item
+      a.nav-link(href='/restaurants/top') TOP10 人氣餐廳
+    li.nav-item
+      a.nav-link(href='/users/top') 美食達人
   br
   br
   ul.nav.nav-pills.mb-3
